# light-control

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/modules/: Findpigpio.cmake
platform/pwm/: CMakeLists.txt
platform/pwm/src/: NullPwmControl.cpp  NullPwmControl.h  PigpioPwmControl.cpp  PigpioPwmControl.h  PwmControl.cpp  PwmControl.h
src/: main.cpp
